--- a/rel/sys.config
+++ b/rel/sys.config
@@ -2,7 +2,7 @@
 
 [ {ffengine,
    [ {db,
-      [ {hostname, "localhost"}
+      [ {host, "localhost"}
       , {port, 5432}
       , {username, "ffengine"}
       , {password, "ffengine"}
